PROTOTYPE: update the services class to return a full project json, updated routes/controllers to read and manipulate the project data, update the views to bind to this structure.

--- a/modules/prototype/client/views/ce-action.html
+++ b/modules/prototype/client/views/ce-action.html
@@ -2,33 +2,35 @@
     <div class="container">
 
         <div class="breadcrumbs">
-            <a href="#">Projects</a> 
+            <a ui-sref="projects">MEM</a>
             <span>/</span>
-            <a href="/admin/prototype/project-main">{{projectDetail.name}}</a> 
+            <a href="#">Projects</a>
             <span>/</span>
-            <a href="/admin/prototype/compliance-and-enforcement">Compliance &amp; Enforcement</a>
+            <a ui-sref="admin.prototype.projectmain">{{project.name}}</a>
             <span>/</span>
-            <a href="/admin/prototype/inspection">Inspection Report: {{projectinspections[0].id}}</a>
+            <a ui-sref="admin.prototype.cemain">Compliance &amp; Enforcement</a>
             <span>/</span>
-            <span>{{projectactions[0].type}} Issued: {{projectactions[0].id}}</span>
+            <a ui-sref="admin.prototype.inspection({inspectionId: inspection._id})">Inspection Report: {{inspection._id}}</a>
+            <span>/</span>
+            <span>{{action.type}} Issued: {{action._id}}</span>
         </div>
 
         <div class="title-container">
-            <h1>{{projectactions[0].type}} Issued: {{projectactions[0].id}}</h1>
+            <h1>{{action.type}} Issued: {{action._id}}</h1>
 
         </div>
         <div class="row">
             <main class="col-sm-12 col-md-7 col-lg-8">
                 
                 <section class="action-summary">
-                    <p>{{projectactions[0].summary}}</p>
+                    <p>{{action.summary}}</p>
                 </section>
 
                 <section class="action-narrative">
                     <h2>Inspector's Order</h2>
-                    <div ng-bind-html="projectactions[0].detail"></div>
+                    <div ng-bind-html="action.detail"></div>
                     <ul class="resource-list resource-list-lg list-group">
-                        <li class="list-group-item list-group-item-action" ng-repeat="document in projectactions[0].documents">
+                        <li class="list-group-item list-group-item-action" ng-repeat="document in action.documents">
                             <div class="avatar">
                                 <i class="material-icons">insert_drive_file</i>
                             </div>
@@ -44,9 +46,9 @@
 
                 <section class="action-narrative">
                     <h2>Mine Manager's Response</h2>
-                    <p>{{projectactions[0].response}}</p>
+                    <p>{{action.response}}</p>
                      <ul class="resource-list resource-list-lg list-group">
-                        <li class="list-group-item list-group-item-action" ng-repeat="document in projectactions[0].responseDocuments">
+                        <li class="list-group-item list-group-item-action" ng-repeat="document in action.responseDocuments">
                             <div class="avatar">
                                 <i class="material-icons">insert_drive_file</i>
                             </div>
@@ -69,19 +71,19 @@
                     <ul class="detail-list">
                         <li class="clearfix">
                             <span class="name">Mine Name:</span>
-                            <span class="value">{{projectDetail.name}}</span>
+                            <span class="value">{{project.name}}</span>
                         </li>
                         <li class="clearfix">
                             <span class="name">Inspection Date:</span>
-                            <span class="value">{{projectinspections[0].date}}</span>
+                            <span class="value">{{inspection.date}}</span>
                         </li>
                         <li class="clearfix">
                             <span class="name">Inspecting Agency:</span>
-                            <span class="value">{{projectinspections[0].agency}}</span>
+                            <span class="value">{{inspection.agency}}</span>
                         </li>
                         <li class="clearfix">
                             <span class="name">Inspector(s):</span>
-                            <span class="value">{{projectinspections[0].inspector}}</span>
+                            <span class="value">{{inspection.inspector}}</span>
                         </li>
                     </ul>
                 </div>
@@ -91,7 +93,7 @@
                     <h2 class="card-title">Related Documents</h2>
                      <div class="resource-list resource-list-sm list-group">
                         <a class="list-group-item list-group-item-action" href="#"
-                            ng-repeat="document in projectinspections[0].relatedDocuments">
+                            ng-repeat="document in inspection.relatedDocuments">
                             <span class="avatar">
                                 <i class="material-icons md-18">insert_drive_file</i>
                             </span>
