--- a/modules/prototype/client/views/ce-inspection.html
+++ b/modules/prototype/client/views/ce-inspection.html
@@ -2,31 +2,33 @@
 <div class="container">
     
     <div class="breadcrumbs">
-        <a href="#">Projects</a> 
+        <a ui-sref="projects">MEM</a>
         <span>/</span>
-        <a href="/admin/prototype/project-main">{{projectDetail.name}}</a> 
+        <a href="#">Projects</a>
         <span>/</span>
-        <a href="/admin/prototype/compliance-and-enforcement">Compliance &amp; Enforcement</a>
+        <a ui-sref="admin.prototype.projectmain">{{project.name}}</a>
         <span>/</span>
-        <span>Inspection Report: {{projectinspections[0].id}} </span>
+        <a ui-sref="admin.prototype.cemain">Compliance &amp; Enforcement</a>
+        <span>/</span>
+        <span>Inspection Report: {{inspection._id}} </span>
     </div>
 
     <div class="title-container">
-        <h1>Inspection Report: {{projectinspections[0].id}}</h1>
+        <h1>Inspection Report: {{inspection._id}}</h1>
     </div>
 
     <div class="row">
         <main class="col-sm-12 col-md-7 col-lg-8">
             
             <section class="page-narrative">
-                <p>{{projectinspections[0].summary}}</p>   
+                <p>{{inspection.summary}}</p>   
                 <ul class="resource-list resource-list-lg list-group">
                     <li class="list-group-item list-group-item-action">
                         <div class="avatar">
                             <i class="material-icons">insert_drive_file</i>
                         </div>
                         <span class="title">
-                            <a class="primary" href="">Download Inspection Report - {{projectinspections[0].id}}</a>
+                            <a class="primary" href="">Download Inspection Report - {{inspection._id}}</a>
                         </span>
                         <span class="actions">
                             <i class="material-icons">file_download</i>
@@ -43,7 +45,7 @@
                                 <i class="material-icons">insert_drive_file</i>
                             </div>
                             <span class="title">
-                                <a class="primary" href="">Download Mine Manager's Response - {{projectinspections[0].id}}</a>
+                                <a class="primary" href="">Download Mine Manager's Response - {{inspection._id}}</a>
                             </span>
                             <span class="actions">
                                 <i class="material-icons">file_download</i>
@@ -55,7 +57,7 @@
             <section>
                 <h2>Inspection Actions</h2>
                 <div class="title-bar">
-                    <h3>Viewing {{projectactions.length}} of {{projectactions.length}} Actions</h3>
+                    <h3>Viewing {{project.actions.length}} of {{project.actions.length}} Actions</h3>
                     <div class="filters">
                         <div class="form-inline">
                             <div class="form-group">
@@ -78,13 +80,13 @@
                 </div>
 
                 <table ng-table="tableParams" class="inspections-grid ce-grid table table-striped table-hover" show-filter="false">
-                    <tr ng-repeat="action in projectactions">
+                    <tr ng-repeat="action in inspectionActions">
                         <td class="id-col"
                             header-class="'id-col'"
                             data-title="'ID'"
                             filter="{'actionID':'text'}"
                             sortable="'actionID'">
-                            <a href="/admin/prototype/action">{{action.type}} Issued: {{action.id}}</a>
+                            <a ui-sref="admin.prototype.action({actionId: action._id})">{{action.type}} Issued: {{action._id}}</a>
                             <pre class="row-desc" ng-bind-html="action.detail"></pre>
                             <div class="tag-list">
                                 <span class="tag tag-default" ng-repeat="topic in action.topics">{{topic.name}}</span>
@@ -108,23 +110,23 @@
                     <ul class="detail-list">
                         <li class="clearfix">
                             <span class="name">Mine Name:</span>
-                            <span class="value">{{projectDetail.name}}</span>
+                            <span class="value">{{project.name}}</span>
                         </li>
                         <li class="clearfix">
                             <span class="name">Inspection Date:</span>
-                            <span class="value">{{projectinspections[0].date}}</span>
+                            <span class="value">{{inspection.date}}</span>
                         </li>
                         <li class="clearfix">
                             <span class="name">Inspecting Agency:</span>
-                            <span class="value">{{projectinspections[0].agency}}</span>
+                            <span class="value">{{inspection.agency}}</span>
                         </li>
                         <li class="clearfix">
                             <span class="name">Inspector(s):</span>
-                            <span class="value">{{projectinspections[0].inspector}}</span>
+                            <span class="value">{{inspection.inspector}}</span>
                         </li>
                         <li class="clearfix">
                             <span class="name">Phase:</span>
-                            <span class="value">{{projectinspections[0].phase}}</span>
+                            <span class="value">{{inspection.phase}}</span>
                         </li>
                     </ul>
                 </div>
@@ -134,7 +136,7 @@
                 <h2 class="card-title">Related Documents</h2>
                 <div class="resource-list resource-list-sm list-group">
                     <a class="list-group-item list-group-item-action" href="#"
-                        ng-repeat="document in projectinspections[0].relatedDocuments">
+                        ng-repeat="document in inspection.relatedDocuments">
                         <span class="avatar">
                             <i class="material-icons md-18">insert_drive_file</i>
                         </span>
