--- a/modules/prototype/client/views/condition.html
+++ b/modules/prototype/client/views/condition.html
@@ -1,21 +1,29 @@
 
 <div class="container">
     <div class="breadcrumbs">
-        <a href="#">Projects</a> <span>/</span> <a href="/admin/prototype/project-main">Mount Milligan Mine</a> <span>/</span> <span>Subtopic</span>
+        <a ui-sref="projects">MEM</a>
+        <span>/</span>
+        <a href="#">Projects</a>
+        <span>/</span>
+        <a ui-sref="admin.prototype.projectmain">{{project.name}}</a>
+        <span>/</span>
+        <a ui-sref="admin.prototype.conditionsmain">Project Conditions</a>
+        <span>/</span>
+        <span>Condition: {{condition.name}} </span>
     </div>
     <div class="title-container">
-        <h1>{{projectconditions[0].name}}</h1>
+        <h1>{{condition.name}}</h1>
     </div>
     <div class="row">
 
         <main class="col-sm-12 col-md-7 col-lg-8">
             <section class="page-narrative">
-                <p ng-bind-html="projectconditions[0].description"></p>
+                <p ng-bind-html="condition.description"></p>
             </section>
             <section>
                 <h2>Supporting Documents</h2>
                 <ul class="resource-list resource-list-lg list-group">
-                    <li class="list-group-item list-group-item-action" ng-repeat="document in projectconditions[0].supportDocuments">
+                    <li class="list-group-item list-group-item-action" ng-repeat="document in condition.supportDocuments">
                         <div class="avatar">
                             <i class="material-icons">insert_drive_file</i>
                         </div>
