--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -107,7 +107,7 @@
                             <span class="primary">Document Link</span>
                         </span>
                         <span class="actions">
-                            <i class="material-icons md-18">more_vert</i>
+                            <i class="material-icons">file_download</i>
                         </span>
                     </a>
                     <a class="list-group-item list-group-item-action" href="#">
@@ -118,7 +118,7 @@
                             <span class="primary">Document Link</span>
                         </span>
                         <span class="actions">
-                            <i class="material-icons md-18">more_vert</i>
+                            <i class="material-icons">file_download</i>
                         </span>
                     </a>
                     <a class="list-group-item list-group-item-action" href="#">
@@ -129,7 +129,7 @@
                             <span class="primary">Document Link</span>
                         </span>
                         <span class="actions">
-                            <i class="material-icons md-18">more_vert</i>
+                           <i class="material-icons">file_download</i>
                         </span>
                     </a>
                 </div>
