--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -35,16 +35,17 @@
 
             <section>
                 <h2>Topics</h2>
+                <p>Explore the topic areas below to learn more about how the mining operations generally and the Mount Milligan mine specifically address the shared values of the people of British Columbia.</p>
                 <ul class="topic-blocks block-container clearfix">
                     <li>
                         <a class="block block-hover" href="/admin/prototype/topic">
-                            <h3>Air Quality</h3>
+                            <h3>Environment</h3>
                             <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
                         </a>
                     </li>
                     <li>
                         <a class="block block-hover" href="/admin/prototype/topic">
-                            <h3>Water Quality</h3>
+                            <h3>Communities</h3>
                             <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
                         </a>
                     </li>
@@ -56,7 +57,7 @@
                     </li>
                     <li>
                         <a class="block block-hover" href="/admin/prototype/topic">
-                            <h3>Tailings Management</h3>
+                            <h3>Heritage</h3>
                             <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
                         </a>
                     </li>
@@ -77,7 +78,7 @@
                         </span>
                     </li>
                 </ul>
-                <a class="read-more-link mt-05" href="javascript:void();">Learn More about Authorizations »</a>
+                <a class="read-more-link mt-05" href="javascript:void();">Learn More about Authorizations for Mount Milligan »</a>
             </section>
 
             <section>
@@ -110,7 +111,7 @@
                         </div>
                     </li>
                 </ul>
-                <a class="read-more-link mt-025" href="/admin/prototype/compliance-and-enforcement">Learn More about Compliance &amp; Enforcement »</a>
+                <a class="read-more-link mt-025" href="/admin/prototype/compliance-and-enforcement">More about Compliance &amp; Enforcement at Mount Milligan »</a>
             </section>
 
         </main>
