--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -79,9 +79,9 @@
                                 data-title="'ID'"
                                 filter="{'inspectionID':'text'}"
                                 sortable="'inspection._id'">
-                                <a ui-sref="admin.prototype.inspection({inspectionId:inspection._id})">{{inspection._id}} ({{inspection.agency}}) </a>
+                                <a ui-sref="admin.prototype.inspection({inspectionId:inspection.inspectionId})">{{inspection.inspectionId}} ({{inspection.agency}}) </a>
                                 <div class="tag-list">
-                                    <span class="tag tag-default" ng-repeat="topic in inspection.topics">{{topic.name}}</span>
+                                    <span class="tag tag-default" ng-repeat="topic in inspection.topics">{{topic}}</span>
                                 </div>
                             </td>
                             <td class="date-col" 
