--- a/modules/prototype/client/views/conditions-main.html
+++ b/modules/prototype/client/views/conditions-main.html
@@ -67,17 +67,9 @@
         <aside class="col-sm-12 col-md-5 col-lg-4">
 
             <section class="card">
-                <h2 class="card-title">Inspection Details</h2>
+                <h2 class="card-title">Filter Control Goes Here</h2>
                 <div class="card-block">
                 </div>
-            </section>
-                
-            <section class="card">
-                <h2 class="card-title">Related Documents</h2>
-            </section>
-
-            <section class="card">
-                <h2 class="card-title">Links of Interest</h2>
             </section>
             
         </aside>
