--- a/modules/prototype/client/styles/layouts/layout.scss
+++ b/modules/prototype/client/styles/layouts/layout.scss
@@ -226,9 +226,24 @@ main {
     border: 0;
 }
 
-
 .map-thumbnail {
     margin-bottom: 0.5rem;
     height: 180px;
     background: #FFF;
+}
+
+.map-layers-view {
+    position: absolute;
+}
+
+.map-layers-view,
+.angular-google-map {
+    width: 100%;
+    height: 100%;
+}
+
+.angular-google-map-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
