--- a/modules/projects/client/views/projects.abstract.html
+++ b/modules/projects/client/views/projects.abstract.html
@@ -39,9 +39,6 @@
 
 		<div class="col-sm-8 col-md-8 col-lg-9">
 			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h2>Environmental Assessments</h2>
-				</div>
 				<tmpl-projects-map id="anchor-map" x-projects='projects'></tmpl-projects-map>
 			</div>
 		</div>
@@ -49,7 +46,7 @@
 	</div>
 
 	<div class="panel panel-default no-margin">
-		<div class="panel-heading"><h2>List of Environmental Assessments</h2></div>
+		<div class="panel-heading"><h2>Mining Projects</h2></div>
 		<tmpl-projects-list2 id="anchor-list" x-projects="projects"></tmpl-projects-list2>
 	</div>
 
