--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -144,14 +144,13 @@
             <section class="card">
                 <h2 class="card-title">Project Status</h2>
                 <ul class="project-status resource-list resource-list-sm list-group">
-                    <li class="list-group-item" ng-repeat="phase in project.phases | orderBy: 'order'">
+                    <li class="list-group-item" ng-class="{'inactive' : phase.status == 'Inactive'}" ng-repeat="phase in project.phases | orderBy: 'order'">
                         <span class="title">
                             <span class="primary">{{phase.name}}</span>
                         </span>
                         <span class="actions">
                             <span class="tag"
-                                    ng-class="{'tag-info': phase.status == 'Active',
-                                                'tag-default' : phase.status == 'Complete'}">{{phase.status}}</span>
+                                    ng-class="{'tag-info': phase.status == 'Active', 'tag-default': phase.status == 'Complete' || phase.status == 'Inactive'}">{{phase.status}}</span>
                         </span>
                     </li>
                 </ul>
