--- a/modules/prototype/client/views/ce-action.html
+++ b/modules/prototype/client/views/ce-action.html
@@ -10,25 +10,25 @@
             <span>/</span>
             <a ui-sref="admin.prototype.cemain">Compliance &amp; Enforcement</a>
             <span>/</span>
-            <a ui-sref="admin.prototype.inspection({inspectionId: inspection._id})">Inspection Report: {{inspection._id}}</a>
+            <a ui-sref="admin.prototype.inspection({inspectionId: inspection.inspectionId})">Inspection Report: {{inspection.inspectionId}}</a>
             <span>/</span>
-            <span>{{action.type}} Issued: {{action._id}}</span>
+            <span>{{action.type}} Issued: {{action.orderId}}</span>
         </div>
 
         <div class="title-container">
-            <h1>{{action.type}} Issued: {{action._id}}</h1>
+            <h1>{{action.type}} Issued: {{action.orderId}}</h1>
 
         </div>
         <div class="row">
             <main class="col-sm-12 col-md-7 col-lg-8">
                 
                 <section class="action-summary">
-                    <p>{{action.summary}}</p>
+                    <p>{{action.summary || 'Summary: Missing from spreadsheet / json'}}</p>
                 </section>
 
                 <section class="action-narrative">
                     <h2>Inspector's Order</h2>
-                    <div ng-bind-html="action.detail"></div>
+                    <div ng-bind-html="action.text"></div>
                     <ul class="resource-list resource-list-lg list-group">
                         <li class="list-group-item list-group-item-action" ng-repeat="document in action.documents">
                             <div class="avatar">
@@ -46,7 +46,7 @@
 
                 <section class="action-narrative">
                     <h2>Mine Manager's Response</h2>
-                    <p>{{action.response}}</p>
+                    <p>{{action.responseText}}</p>
                      <ul class="resource-list resource-list-lg list-group">
                         <li class="list-group-item list-group-item-action" ng-repeat="document in action.responseDocuments">
                             <div class="avatar">
