PROTOTYPE: topic/subtopic hierarchy

--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -38,25 +38,25 @@
                 <p>Explore the topic areas below to learn more about how the mining operations generally and the <strong>{{project.name}}</strong> specifically address the shared values of the people of British Columbia.</p>
                 <ul class="topic-blocks block-container clearfix">
                     <li>
-                        <a class="block block-hover" href="/admin/prototype/topic">
+                        <a class="block block-hover" ui-sref="admin.prototype.topic({topic: 'Environment'})">
                             <h3>Environment</h3>
                             <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
                         </a>
                     </li>
                     <li>
-                        <a class="block block-hover" href="/admin/prototype/topic">
+                        <a class="block block-hover"  ui-sref="admin.prototype.subtopic({topic: 'Environment', subtopic: 'Tailings Management'})">
                             <h3>Communities</h3>
                             <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
                         </a>
                     </li>
                     <li>
-                        <a class="block block-hover" href="/admin/prototype/topic">
+                        <a class="block block-hover" href="#">
                             <h3>Health &amp; Safety</h3>
                             <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
                         </a>
                     </li>
                     <li>
-                        <a class="block block-hover" href="/admin/prototype/topic">
+                        <a class="block block-hover" href="#">
                             <h3>Heritage</h3>
                             <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
                         </a>
@@ -111,7 +111,7 @@
                         </div>
                     </li>
                 </ul>
-                <a class="read-more-link mt-025" href="/admin/prototype/compliance-and-enforcement">More about Compliance &amp; Enforcement at Mount Milligan »</a>
+                <a class="read-more-link mt-025" ui-sref="admin.prototype.cemain">More about Compliance &amp; Enforcement at Mount Milligan »</a>
             </section>
 
         </main>
